{
    "name": "EditorControls",
    "maps": [
        {
            "name": "ActionMap",
            "id": "02eb46b2-493c-48ca-9444-62c569987388",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "de1fdc09-6fc8-49d5-b716-f5c784019119",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "50de94c9-e811-4204-a58b-c4c1f7d5d399",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "774d7439-6cf9-4996-ae62-58144517e865",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5e69efd8-596a-4ca0-8a93-0f3ac59ad838",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "09a4e2e8-9509-4c84-afec-7edefbd1f470",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b2bfd565-a3d9-42a2-85f1-d331bb511763",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2de789ec-5cf4-46c7-ac92-2ced7bcf1113",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f2207c31-633f-4820-9ea1-023449e3e721",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}