{
    "name": "InputActions",
    "maps": [
        {
            "name": "ActionMap",
            "id": "04ec94a9-6dee-4dcc-ac7b-973264e69c16",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2493f36d-7383-4413-9d21-37294ec19caf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "49eeae6d-6750-41d6-8963-9f5d06c829a7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b7e8fa5c-cd72-4239-bc43-311c490c4374",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "c9ffd3d5-5ffb-4518-a088-34c1e417baa0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f513214d-358c-44bc-aa4a-986c5caef958",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "fa2516b7-dd74-4be7-9373-2d14721445f9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}